--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Hello I'm 
+        <h1 class="mb-0">Hi I'm 
           <span class="text-primary">Brian Min</span>
         </h1>
         <div class="subheading mb-5 mt-1">Third year computer science student at UCL</div>
-        <p class="lead mb-5">I am experienced in building robust web applications that satisfies my client's requirements.<br>
+        <p class="lead mb-5">I am experienced in developing full stack applications that satisfies my client's requirements.<br>
         In my free time I work on my personal projects turning ideas into reality.<br>
         Currently, I am progressing through the third year of MEng Computer Science degree at University College London.<br>
         </p>
@@ -294,9 +294,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <h2 class="mb-4">Skills</h2>
+        <div class="subheading">Core</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-java"></i> Java
@@ -308,47 +307,89 @@
             <i class="fab fa-python"></i> Python
           </li>
           <li class="list-inline-item">
+            <i class="fab fa-js-square"></i> Javascript
+          </li>
+        </ul>
+        <div class="subheading">Front-end</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
             <i class="fab fa-html5"></i> HTML
           </li>
           <li class="list-inline-item">
             <i class="fab fa-css3-alt"></i> CSS
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i> JS
-          </li>
-          <li class="list-inline-item">
             <i class="fab fa-react"></i> React
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i> NodeJS
-          </li>
-          <li class="list-inline-item">
-            Django
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-laravel"></i> Laravel
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-php"></i> PHP
-          </li>
-          <li class="list-inline-item">
-            MySQL
-          </li>
-          <li class="list-inline-item">
-            MongoDB
+            <i class="fab fa-angular"></i> Angular
           </li>
           <li class="list-inline-item">
             Ionic
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i> Wordpress
+            Electron
           </li>
+        </ul>
+        <div class="subheading">Back-end</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fab fa-node-js"></i> NodeJS
+          </li>
+          <li class="list-inline-item">
+            Express
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-laravel"></i> Laravel
+          </li>
+          <li class="list-inline-item">
+            RubyOnRails
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-php"></i> PHP
+          </li>
+          <li class="list-inline-item">
+            Django
+          </li>
+          <li class="list-inline-item">
+            SQL
+          </li>
+          <li class="list-inline-item">
+            MongoDB
+          </li>
+          <li class="list-inline-item">
+            Redis
+          </li>
+        </ul>
+        <div class="subheading">Others</div>
+        <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-github"></i> Git
           </li>
+          <li class="list-inline-item">
+            <i class="fab fa-linux"></i> Linux
+          </li>
+          <li class="list-inline-item">
+            Nginx
+          </li>
+          <li class="list-inline-item">
+            Vim
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-docker"></i> Docker
+          </li>
+          <li class="list-inline-item">
+            Matlab
+          </li>
+          <li class="list-inline-item">
+            WebRTC
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-npm"></i> NPM
+          </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3 mt-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -358,7 +399,7 @@
             Collaborative source code management with Git</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Team task management with Trello, Notion</li>
+            Project management with Trello, Notion</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             Responsive Web Design</li>
