fix(index.html): add amex internship

--- a/index.html
+++ b/index.html
@@ -85,12 +85,28 @@
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Summer Technology Intern</h3>
+            <div class="subheading mb-3">American Express</div>
+            <p>
+            Used React, Redux and in-house modules to create a frontend module that can be used by customer care professionals to offer the best customer service. 
+            Improved UX by using predictive search dropdowns and collapsible panels for displaying data retrieved from the backend service.
+            Implemented infinite scrolling and lazy loading to improve overall performance.
+            Maintained 100% test coverage with Jest and Enzyme.
+            By the end of the internship, we managed to deploy the module to production.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2020 - August 2020</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Software Developer</h3>
             <div class="subheading mb-3">Tony's Elite Coding Academy</div>
-            <p>A cross-platform hybrid application that allows coding instructors to remotely teach students from various academies in Seoul through a group chat that allows screen sharing with remote desktop control access and voice chat. Built the full-stack application with React, Electron and Django and configured the live production server with Docker and NGINX.<br><a target="_blank" href="https://www.tonyscoding.com">https://www.tonyscoding.com</a></p>
+            <p>Built a cross-platform hybrid application that allows coding instructors to remotely teach students from various academies in Seoul through a group chat that allows screen sharing with remote desktop control access and voice chat. Built the full-stack application with React, Electron and Django and configured the live production server with Docker and NGINX.<br><a target="_blank" href="https://www.tonyscoding.com">https://www.tonyscoding.com</a></p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2019 - August 2019</span>
