--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Brian Min" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="shortcut icon" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+    <link rel="shortcut icon" sizes="512x512" href="%PUBLIC_URL%/android-chrome-512x512.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
